# caldyr

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  _probe_crude.py  conftest.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
api/: README.md  __init__.py  main.py  models.py  param_schemas.py
docs/: DATA_MODEL.md  ECONOMICS.md  REACTION_EDITOR_PLAN.md  THERMO.md  UX_BACKLOG.md  ai.md  analysis-tools.md  getting-started.md  index.md  tutorial-ammonia-loop.md  tutorial-distillation-tea.md  tutorial-optimization.md  tutorials.md  ui-guide.md  unit-operations.md
engine/caldyr/: __init__.py  assay.py
engine/caldyr/ai/: __init__.py  agent.py  chat.py  config.py  diagnostics.py  llm.py  mcp_server.py  session.py  tools.py
engine/caldyr/analysis/: __init__.py  humidity.py  pinch.py  property_table.py  relief.py
engine/caldyr/core/: __init__.py  component.py  components_db.py  flowsheet.py  port.py  stream.py  unitop.py
engine/caldyr/economics/: __init__.py  analyze.py  capital.py  costing.py  data.py  fired_heater_design.py  opex.py  packed_sizing.py  profitability.py  sizing.py  tray_sizing.py  uncertainty.py
engine/caldyr/io/: __init__.py  flow.py
engine/caldyr/solver/: __init__.py  balance.py  equation_oriented.py  (+5 more)
examples/: 01_mixer_heater.py  02_flash_recycle.py  03_azeotrope_nrtl.py  04_ammonia_loop.py  05_ammonia_economics.py  06_equation_oriented.py  07_ai_agent.py  08_distillation.py  09_logical_ops.py  10_reactors.py  11_rigorous_column.py  12_heat_integration.py  13_pyomo_backend.py  14_absorber.py  15_utilities.py  16_pipe_relief.py  17_extraction.py  18_cyclohexane_plant.py  19_crude_assay.py  20_crude_tower.py  21_resid_crude_tower.py  21_solids.py  22_amine_sweetening.py  23_amine_plant.py  24_amine_plant_flowsheet.py  25_amine_plant_reboiled.py  26_claus_sulfur_recovery.py  27_reactive_distillation.py  28_heteroazeotropic_decant.py  29_packed_column.py  30_lng_exchanger.py  31_saturator.py  32_fired_heater_design.py  33_entrainer_decant_column.py  34_entrainer_plant.py  35_entrainer_economics.py  36_resid_crude_tower.py  README.md
tests/: __init__.py  test_ai_phase_d.py  test_bubble_fallbacks.py  test_m0_mixer_heater.py  test_m10_rigorous_column.py  test_m11_air_cooler.py  test_m11_fired_heater.py  test_m11_pinch.py  test_m11_sizer_registry.py  test_m12_absorber.py  test_m12_balance.py  test_m12_evaporator.py  test_m12_humidity.py  test_m12_property_table.py  test_m12_reboiled_absorber.py  test_m12_rigorous_multifeed.py  test_m12_steam_package.py  test_m12_tray_sizing.py  test_m13_extraction.py  test_m13_pipe.py  test_m13_relief.py  test_m13_specialty_distillation.py  test_m14_assay.py  test_m15_crude_column.py  test_m15_resid_column.py  test_m15_solids.py  test_m16_amine_kent_eisenberg.py  test_m16_amine_package.py  test_m17_claus.py  test_m17_claus_sizers.py  test_m18_reactive_distillation.py  test_m19_decanter.py  test_m1_recycle.py  test_m20_packed_sizing.py  test_m21_multistream_exchanger.py  test_m22_saturator.py  test_m23_fired_heater_design.py  test_m24_heteroazeotropic_column.py  test_m25_entrainer_plant.py  test_m2_reactors_hx.py  (+18 more)
web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
web/e2e/: smoke.spec.ts
web/scripts/: README.md  reflux_chart.py  shoot-docs.mjs
web/src/: App.tsx  api.ts  elk.d.ts  examples.ts  flow.test.ts  flow.ts  store.ts  styles.css  templates.ts  types.ts
(+113 files in other folders)
